Created user profile and clarification pages.

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +7,7 @@
     android:gravity="center"
     tools:context=".RegisterActivity"
     android:orientation="vertical"
-    android:background="@drawable/signInBackgroundImage"
+    android:background="@drawable/signup"
     >
 
     <LinearLayout
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:ems="10"
-            android:hint="Name"
+            android:hint="@string/name"
             android:textColor="@color/white"
             android:backgroundTint="@color/gray"
             android:textColorHint="@color/gray"
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:ems="10"
-            android:hint="Contact Number"
+            android:hint="@string/contact_number"
             android:inputType="phone"
             android:textColor="@color/white"
             android:backgroundTint="@color/gray"
@@ -104,4 +104,4 @@
     </LinearLayout>
 
 
-</layout>
+</LinearLayout>
