--- a/app/src/main/res/layout/activity_clarification_page.xml
+++ b/app/src/main/res/layout/activity_clarification_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ClarificationPage"
-    android:background="@color/black"
+    android:background="@color/colorAccent"
     android:orientation="vertical"
     >
 
@@ -19,6 +19,12 @@
         android:orientation="vertical"
         android:layout_marginTop="20dp"
         >
+        <ImageView
+            android:id="@+id/plant_image_view"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:layout_marginBottom="8dp"
+            android:background="@android:color/black" />
 
         <Button
             android:id="@+id/random_choose_button"
@@ -28,7 +34,7 @@
             android:layout_marginRight="20dp"
             android:padding="12dp"
             android:backgroundTint="@color/black"
-            android:text="@string/choose_image_label"
+            android:text="@string/choose_image"
             app:cornerRadius="12dp" />
 
         <Button
@@ -39,7 +45,7 @@
             android:layout_marginRight="20dp"
             android:backgroundTint="@color/black"
             android:padding="12dp"
-            android:text="@string/classify_label"
+            android:text="@string/classify"
             app:cornerRadius="12dp" />
 
 
@@ -55,7 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_gravity="bottom"
-            app:menu="@menu/bottom_navigation"
+            app:menu="@menu/navigation_menu"
 
             />
 
