--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#818B8E</color>
+    <color name="colorPrimary">#254D47</color>
+    <color name="colorPrimaryDark">#8FA1AC</color>
+    <color name="colorAccent">#0C2422</color>
+    <color name="lightgreen">#609682</color>
+    <color name="green">#7DAE3E</color>
+   \
+
 </resources>
